--- a/Exercicios/ex022/style6.css
+++ b/Exercicios/ex022/style6.css
@@ -3,12 +3,13 @@ body{
     background-color: black;
     background-image: url(imagens/imagens-cap19/wallpaper002.jpg);
     background-position: center center;
-    background-repeat: no-repeat;
+    background-repeat:no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 main{
     background-color: white;
-    width: 400px;
+    max-width: 700px;
     padding: 10px;
     margin: auto;
     border: 1px solid darkblue;
