--- a/Desafíos/dd012/style.css
+++ b/Desafíos/dd012/style.css
@@ -96,7 +96,7 @@ section.imagem#um{
     background-image: url(img/background001.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: right center;
     background-attachment: fixed;
 
 }
@@ -109,7 +109,7 @@ section.imagem#dois{
     background-image: url(img/background002.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: left center;
     background-attachment: fixed;
 
 }
@@ -118,7 +118,7 @@ section.imagem#dois{
 
 
 section.imagem p{
-    background-color: rgba(0, 0, 0, 0.322);
+    background-color: rgba(0, 0, 0, 0.562);
     display: inline-block;
     text-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.418);
     padding: 9px;
