--- a/Exercicios/ex026/mq002/estilos/empe.css
+++ b/Exercicios/ex026/mq002/estilos/empe.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /*Em pé*/
+
+body{
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+    
+    
+}
