--- a/Exercicios/ex026/mq005/estilos/celular.css
+++ b/Exercicios/ex026/mq005/estilos/celular.css
@@ -1,32 +1,70 @@
 @charset "UTF-8";
 
+body{
+    
+    width: 100%;
+}
+
+header{
+    
+}
 
 header h1 {
-    position: relative;
     
-    left: 20px;
+    text-align: center;
+    
+    
 }   
+
+menu{
+    display: none;
+}
+
+#imenu{
+    color: white;
+    margin-top: 2.7px;
+    display: block;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(65, 65, 65);
+    padding: 9px;
+    cursor: pointer;
+}
+
+#imenu:hover{
+    background-color: #c9c9c9;
+    color: black;
+
+}
 
 main{
     width: 60vw;
-    position: relative;
-    top: -11em;
-    left: 20px;
+   
 }
-menu{
-    width: 0px;
-}
+
 ul{
-    width: 100px;
-    background-color: transparent;
+    width: 100%;
+  
+    
 }
 
 li{
     display: block;
     
-    width: 4em;
-    text-align: center;
-    margin-bottom: 5px;
-    margin-left: 10px;
+    border: 2px solid gray;
+    border-radius: 5px;
+   
     
+    
+    text-align: center;
+    
+    
+    
+}
+
+header menu ul :hover{
+    background-color: rgb(116, 116, 116);
+    border: 2px solid rgb(116, 116, 116) ;
+    box-sizing: border-box;
+    cursor: pointer;
 }
