--- a/Exercicios/ex026/mq005/estilos/style.css
+++ b/Exercicios/ex026/mq005/estilos/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+
+
+
+
 *{
     font-family: Arial, Helvetica, sans-serif;
     padding: 0px;
@@ -13,13 +17,18 @@ html{
 }
 
 header{
+ 
+
+    
+    
+}
+header h1{
     color: rgb(209, 209, 209);
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.493);
     text-align: center;
     background-color: gray;
     padding: 15px;
-    
-    
+    padding-bottom: 20px;
     
 }
 
@@ -36,6 +45,15 @@ li{
     background-color: rgb(83, 83, 83);
     text-align: center;
     list-style-type: none;
+}
+
+#imenu{
+    display: none;
+}
+
+a{
+    color: white;
+    text-decoration: none;
 }
 
 main{
