--- a/Exercicios/ex026/mq005/estilos/celular.css
+++ b/Exercicios/ex026/mq005/estilos/celular.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0px;
+    margin: 0px;
+}
 body{
     
     width: 100%;
@@ -7,12 +13,15 @@ body{
 
 
 
-header h1 {
-    
+header h1{
+    color: rgb(209, 209, 209);
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.493);
     text-align: center;
+    background-color: gray;
+    padding: 15px;
+    padding-bottom: 20px;
     
-    
-}   
+} 
 
 nav{
     display: none;
@@ -48,13 +57,17 @@ ul{
 
 li{
     display: block;
+    color: white;
     
     border: 2px solid gray;
     border-radius: 5px;
    
-    
-    
     text-align: center;
+    padding: 8px;
+    
+    background-color: rgb(83, 83, 83);
+    
+    list-style-type: none;
     
     
     
@@ -65,4 +78,29 @@ header nav ul :hover{
     border: 2px solid rgb(116, 116, 116) ;
     box-sizing: border-box;
     cursor: pointer;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
+
+main{
+    width: 600px;
+    background-color: rgb(209, 209, 209);
+    margin: auto;
+    padding: 5px;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+main h1{
+    padding: 25px;
+    text-align: center;
+    
+}
+
+main p {
+    padding: 15px;
 }
