--- a/Exercicios/ex026/mq005/estilos/celular.css
+++ b/Exercicios/ex026/mq005/estilos/celular.css
@@ -87,7 +87,7 @@ a{
 
 
 main{
-    width: 600px;
+    width: 90vw;
     background-color: rgb(209, 209, 209);
     margin: auto;
     padding: 5px;
