--- a/Exercicios/ex026/mq005/estilos/style.css
+++ b/Exercicios/ex026/mq005/estilos/style.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
 @media  screen and (min-width: 768px) /* 768 pra cima */ {
+
+
+
     i#imenu{
         display: none;
 
@@ -11,10 +14,20 @@
         background-color: gray;
         
     }
-
-    nav ul{
+    main{
+        
+        width: 700px;
+        background-color: rgb(209, 209, 209);
+        
+        margin: auto;
+        padding: 5px;
+        margin-top: 12px;
+        border-radius: 5px;
+        
         
     }
+
+    
 
     nav ul li{
         display: inline-block;
@@ -28,9 +41,8 @@
     }
 
   
-    nav ul li:hover{
-        width: 10vw;
-    }
+   
+
 
     
     
